# wallboard

./: README.md  config.yaml  pyproject.toml
src/wallboard/: cli.py  config.py  dashboard.py  wallpaper.py
src/wallboard/renderers/: __init__.py  render_pillow.py  render_web.py
src/wallboard/widgets/: __init__.py  base.py  calendar.py  clock.py  system.py  weather.py
systemd/: wallboard.service  wallboard.timer
